<resources>
    <string name="app_name">MyEcom App</string>
    <string name="total_rupees">₹ 0</string>
    <string name="total_items">0 items</string>
    <string name="checkout">CHECKOUT</string>
    <string name="item_image">Item\'s Image</string>
    <string name="apple">Apple</string>
    <string name="kg_25">2.5 kg</string>
    <string name="kg_100">₹ 100 / kg</string>
    <string name="add_button">Add Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="dropdown_button">DropDown Button</string>
    <string name="dropup_button">DropUp Button</string>
    <string name="quantity">0</string>
    <string name="kiwi">Kiwi</string>
    <string name="_2_variants">2 variants</string>
    <string name="variant_name">₹ 96 : 500 g</string>
    <string name="search">Search</string>
    <string name="your_api_key">AIzaSyCGffS7DUlmxmWDrw9ZYTnxoj4BrXfJHbY</string>
    <string name="title_activity_location_picker">Map</string>
</resources>