<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/item_image"
            android:adjustViewBounds="true"
            android:src="@drawable/kiwi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/imgLoader"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/kiwi"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/_2_variants"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageButton
            android:id="@+id/dropDownBtn"
            style="@style/imageButton"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/dropdown_button"
            android:src="@drawable/ic_arrow_drop_down"
            app:layout_constraintStart_toEndOf="@id/subtitle"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageButton
            android:id="@+id/dropUpBtn"
            style="@style/imageButton"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/dropup_button"
            android:src="@drawable/ic_arrow_drop_up"
            app:layout_constraintStart_toEndOf="@id/subtitle"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:visibility="gone"/>

        <!--Quantity Group-->
        <ImageButton
            android:id="@+id/incBtn"
            style="@style/imageButton"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/zero_qty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="incBtn"/>

        <ImageButton
            android:id="@+id/decBtn"
            style="@style/imageButton"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/edit_button"
            android:src="@drawable/ic_remove"
            app:layout_constraintEnd_toStartOf="@id/qty"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qty"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/quantity"
            app:layout_constraintBottom_toBottomOf="@+id/incBtn"
            app:layout_constraintEnd_toStartOf="@+id/incBtn"
            app:layout_constraintTop_toTopOf="@+id/incBtn" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/non_zero_qty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="decBtn,qty"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/variantChips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true">

        <include layout="@layout/chip_variant" />
        <include layout="@layout/chip_variant" />

    </com.google.android.material.chip.ChipGroup>


    </LinearLayout>
</androidx.cardview.widget.CardView>