<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/card_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/design_default_color_primary"
        android:padding="16dp">

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_rupees"
            app:layout_constraintBottom_toTopOf="@+id/no_of_items"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/material_on_primary_emphasis_high_type"
            style="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/no_of_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_items"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/material_on_primary_emphasis_medium"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"/>

        <TextView
            android:id="@+id/checkout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total"
            android:textColor="@color/material_on_primary_emphasis_high_type"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textStyle="bold"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>